tests/snapshots/unexpected_eof__incomplete_check_close_stmt.snap
---
source: tests/unexpected_eof.rs
expression: stderr

---
error: expected keyword `check`, found end of file
      |
    4 |     please end
      |               ^
      |

Although I do know what the next token must be, I cannot just make the assumption and treat the next token like it was the token I want.
You could replace the token with the one I expected.

